--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
-colorama==0.4.6
-pandas==2.1.1
-sbrscrape==0.0.10
-tensorflow==2.14.0
-#tensorflow-metal==1.1.0
-xgboost==2.0.0
-tqdm==4.66.1
-flask==3.0.0
-scikit-learn==1.3.1
-toml==0.10.2
+nba_api
+pandas>=1.5.0
+numpy>=1.21.0
+scikit-learn>=1.0.0
+xgboost>=1.7.0
+lightgbm>=3.3.0
+joblib>=1.2.0
+matplotlib>=3.5.0
+seaborn>=0.12.0
+requests>=2.28.0
+shap>=0.41.0
+tqdm>=4.65.0
+optuna>=3.2.0
+category_encoders>=2.6.0
+psutil>=5.9.0  # For system verification
+pytest>=7.3.0  # For testing
+python-dotenv>=1.0.0  # For environment variables
+sqlalchemy>=2.0.0  # For database operations
+pandas-profiling>=3.2.0  # For data analysis
+memory_profiler>=0.60.0  # For memory optimization
